    cmake_minimum_required(VERSION 3.7)

    project(Chart)
    set(CMAKE_CXX_STANDARD 11)
    set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
    set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
    #add_subdirectory(/usr/local/include/GLFW)
    add_executable(Chart main.cpp ${sources} lib/Chart.cpp lib/Chart.h)
    find_package(OpenGL REQUIRED)
    find_package(GLUT REQUIRED)
    find_package(GLEW REQUIRED)
    find_package(GLFW3 REQUIRED)

    #target_include_directories(Chart ${OPENGL_INCLUDE_DIR})
    target_link_libraries(Chart ${OPENGL_gl_LIBRARY})
    include_directories(${OPENGL_INCLUDE_DIRS} ${EMSCRIPTEN_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${GL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${GLFW3_INCLUDE_DIRS})
    include_directories(/usr/local/include/)
    include_directories(/emscripten/emscripten/incoming/system/include)
    include_directories(/emscripten/)
    link_directories(/usr/local/lib/)
    target_link_libraries(Chart glfw ${GLUT_LIBRARY} ${GLEW_LIBRARY} ${GLFW3_LIBRARY})

    SET_TARGET_PROPERTIES(Chart PROPERTIES LINK_FLAGS -s DEMANGLE_SUPPORT=1 --preload-file ${CMAKE_SOURCE_DIR}/assets --bind)